# arkiv-sdk-python

./: .env.testing  .gitignore  .pre-commit-config.yaml  CI_ANALYSIS.md  DEPENDENCY_GROUPS.md  OPTIMIZATION_PROPOSALS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
scripts/: check-all.sh
src/arkiv/: __init__.py  account.py  client.py  contract.py  entities.py  exceptions.py  module.py  smart_contract.py  types.py  utils.py
src/arkiv_sdk/: __init__.py
tests/: conftest.py  node_container.py  test_account.py  test_arkiv_basic.py  test_arkiv_create.py  test_arkiv_fixture.py  test_entity_create.py  test_node.py  test_utils.py  test_web3.py  test_web3_compatibility.py
